rust/transpiler/tests/errors/unclosed_match.expected.err

 file: unclosed_match.hyper:1:1
error: This 'match' block is never closed.
 1 | match status:
   | ^^^^^^^^^^^^^ opened here

 help: Close with 'end'

